k8s/base/m2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magento
  labels:
    app: magento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magento
  template:
    metadata:
      labels:
        app: magento
    spec:
      containers:
      - name: magentoweb
        image: magento
        ports:
        - containerPort: 80
        volumeMounts:
        - name: source
          mountPath: /var/www/html/
      volumes:
      - name: source
        hostPath:
          path: ../magento
          type: Directory
