k8s/base/db_exposed_svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql-exposed
spec:
  selector:
    app: mysql
  type: NodePort
  ports:
  - protocol: TCP
    port: 33061
    targetPort: 3306
