k8s/base/m2_svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: magento
spec:
  selector:
    app: magento
  ports:
  - protocol: TCP
    port: 80
